--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,62 +8,74 @@
     tools:context=".MainActivity">
     >
 
-    <TextView
-        android:id="@+id/textView2"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="98dp"
-        android:layout_margin="30dp"
-        android:text="Sign Up"
-        android:textAlignment="center"
-        android:textColor="#0000ff"
-        android:textSize="50dp"
-        android:textStyle="bold"
-        app:fontFamily="cursive" />
+        android:layout_height="match_parent">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:focusableInTouchMode="true"
-        android:hint="Name"
-        android:textColor="#FFA500"
-        android:textSize="20dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:focusableInTouchMode="true"
-        android:hint="Phone number"
-        android:textColor="#FFA500"
-        android:textSize="20dp" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="98dp"
+                android:layout_margin="30dp"
+                android:text="Sign Up"
+                android:textAlignment="center"
+                android:textColor="#000000"
+                android:textSize="50dp"
+                android:textStyle="bold"
+                app:fontFamily="cursive" />
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:focusableInTouchMode="true"
-        android:hint="Password"
-        android:textColor="#FFA500"
-        android:textSize="20dp" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:focusableInTouchMode="true"
+                android:hint="Name"
+                android:textColor="#FFA500"
+                android:textSize="20dp" />
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:focusableInTouchMode="true"
-        android:hint="Confirm password"
-        android:textColor="#FFA500"
-        android:textSize="20dp" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:focusableInTouchMode="true"
+                android:hint="Phone number"
+                android:textColor="#FFA500"
+                android:textSize="20dp" />
 
-    <Button
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:focusableInTouchMode="true"
+                android:hint="Confirm password"
+                android:textColor="#FFA500"
+                android:textSize="20dp" />
 
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_margin="40dp"
-        android:background="@drawable/rounded_button"
-        android:text="Register"
-        android:textColor="#ffffff"
-        android:textSize="30dp" />
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:focusableInTouchMode="true"
+                android:hint="Password"
+                android:textColor="#FFA500"
+                android:textSize="20dp" />
+
+            <Button
+
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_margin="40dp"
+                android:background="@drawable/rounded_button"
+                android:text="Register"
+                android:textColor="#ffffff"
+                android:textSize="30dp" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
