--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
-    >
+    tools:context=".log_in">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -15,19 +14,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView2"
+            <ImageView
+                android:id="@+id/imageView2"
                 android:layout_width="match_parent"
-                android:layout_height="98dp"
-                android:layout_margin="30dp"
-                android:text="Sign Up"
-                android:textAlignment="center"
-                android:textColor="#000000"
-                android:textSize="50dp"
-                android:textStyle="bold"
-                app:fontFamily="cursive" />
+                android:layout_height="202dp"
+                android:layout_marginTop="30dp"
+
+                android:src="@drawable/ico" />
 
             <EditText
                 android:layout_width="match_parent"
@@ -47,23 +42,6 @@
                 android:textColor="#FFA500"
                 android:textSize="20dp" />
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:focusableInTouchMode="true"
-                android:hint="Confirm password"
-                android:textColor="#FFA500"
-                android:textSize="20dp" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:focusableInTouchMode="true"
-                android:hint="Password"
-                android:textColor="#FFA500"
-                android:textSize="20dp" />
 
             <Button
 
@@ -75,6 +53,17 @@
                 android:textColor="#ffffff"
                 android:textSize="30dp" />
 
+            <Button
+
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+
+                android:background="@drawable/rounded_button"
+                android:text="Create account"
+                android:textColor="#ffffff"
+                android:textSize="30dp" />
         </LinearLayout>
     </ScrollView>
 
