--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -29,6 +29,7 @@
                 app:fontFamily="cursive" />
 
             <EditText
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
@@ -38,6 +39,7 @@
                 android:textSize="20dp" />
 
             <EditText
+                android:id="@+id/phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
@@ -47,15 +49,7 @@
                 android:textSize="20dp" />
 
             <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:focusableInTouchMode="true"
-                android:hint="Confirm password"
-                android:textColor="#FFA500"
-                android:textSize="20dp" />
-
-            <EditText
+                android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
@@ -64,8 +58,19 @@
                 android:textColor="#FFA500"
                 android:textSize="20dp" />
 
+            <EditText
+                android:id="@+id/confirmPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                android:focusableInTouchMode="true"
+                android:hint="Confirm Password"
+                android:textColor="#FFA500"
+                android:textSize="20dp" />
+
             <Button
 
+                android:id="@+id/register"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_margin="40dp"
