--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -14,7 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textView2"
@@ -28,69 +28,75 @@
                 android:textStyle="bold"
                 app:fontFamily="cursive" />
 
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-            <android.support.design.widget.TextInputEditText         
-                android:id="@+id/name"
+                android:layout_height="match_parent">
 
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:focusableInTouchMode="true"
-                android:hint="Name"
-                android:textColor="#FFA500"
-                android:textSize="20dp" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/name"
 
-            </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-            <android.support.design.widget.TextInputEditText
-            
-                android:id="@+id/phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:focusableInTouchMode="true"
+                    android:hint="Name"
+                    android:textColor="#FFA500"
+                    android:textSize="20dp" />
 
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:focusableInTouchMode="true"
-                android:hint="Phone number"
-                android:textColor="#FFA500"
+            </com.google.android.material.textfield.TextInputLayout>
 
-                android:textSize="20dp"
-                android:inputType="phone"/>
-            </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/password"
+                android:layout_height="match_parent">
 
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:focusableInTouchMode="true"
+                <com.google.android.material.textfield.TextInputEditText
 
-                android:hint=" Password"
-                android:textColor="#FFA500"
-                android:textSize="20dp" />
-            </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-            <android.support.design.widget.TextInputEditText
-           
-                android:id="@+id/confirmPassword"
+                    android:id="@+id/phone"
 
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:focusableInTouchMode="true"
+                    android:hint="Phone number"
+                    android:inputType="phone"
+
+                    android:textColor="#FFA500"
+                    android:textSize="20dp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:focusableInTouchMode="true"
-                android:hint="Confirm Password"
-                android:textColor="#FFA500"
-                android:textSize="20dp"
-                />
-            </android.support.design.widget.TextInputLayout>
+                android:layout_height="match_parent">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/password"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:focusableInTouchMode="true"
+
+                    android:hint=" Password"
+                    android:textColor="#FFA500"
+                    android:textSize="20dp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <com.google.android.material.textfield.TextInputEditText
+
+                    android:id="@+id/confirmPassword"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:focusableInTouchMode="true"
+                    android:hint="Confirm Password"
+                    android:textColor="#FFA500"
+                    android:textSize="20dp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
 
@@ -102,6 +108,7 @@
                 android:text="Register"
                 android:textColor="#ffffff"
                 android:textSize="30dp" />
+
 
         </LinearLayout>
     </ScrollView>
