home page(my bug fixed)

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -38,7 +38,7 @@
                     android:focusableInTouchMode="true"
                     android:hint="Name"
                     android:inputType="text"
-                    android:textColor="#FFA500"
+                    android:textColor="#000000"
                     android:textSize="20dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -54,7 +54,7 @@
                     android:focusableInTouchMode="true"
                     android:hint="Password"
                     android:inputType="numberPassword"
-                    android:textColor="#FFA500"
+                    android:textColor="#000000"
                     android:textSize="20dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -80,7 +80,7 @@
                 android:layout_marginRight="40dp"
                 android:layout_marginBottom="34dp"
                 android:background="@drawable/rounded_button"
-                android:onClick="statsSecond"
+
                 android:text="Create account"
                 android:textColor="#ffffff"
                 android:textSize="25dp" />
