--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -40,7 +40,7 @@
                     android:layout_margin="15dp"
                     android:focusableInTouchMode="true"
                     android:hint="Name"
-                    android:textColor="#000000"
+                    android:textColor="#FFA500"
                     android:textSize="20dp" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -60,7 +60,7 @@
                     android:hint="Phone number"
                     android:inputType="phone"
 
-                    android:textColor="#000000"
+                    android:textColor="#FFA500"
                     android:textSize="20dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -77,7 +77,7 @@
                     android:focusableInTouchMode="true"
 
                     android:hint=" Password"
-                    android:textColor="#000000"
+                    android:textColor="#FFA500"
                     android:textSize="20dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -94,7 +94,7 @@
                     android:layout_margin="15dp"
                     android:focusableInTouchMode="true"
                     android:hint="Confirm Password"
-                    android:textColor="#000000"
+                    android:textColor="#FFA500"
                     android:textSize="20dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
