--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,9 +13,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-
             android:layout_height="match_parent"
-
             android:orientation="vertical">
 
 
@@ -36,7 +34,8 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
                     android:focusableInTouchMode="true"
-                    android:hint="Name"
+                    android:hint="ID"
+                    android:id="@+id/loginId"
                     android:inputType="text"
                     android:textColor="#000000"
                     android:textSize="20dp" />
@@ -48,6 +47,7 @@
                 app:passwordToggleEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/loginPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
