--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -53,7 +53,7 @@
                     android:layout_margin="15dp"
                     android:focusableInTouchMode="true"
                     android:hint="Password"
-                    android:inputType="numberPassword"
+                    android:inputType="textWebPassword"
                     android:textColor="#000000"
                     android:textSize="20dp" />
             </com.google.android.material.textfield.TextInputLayout>
