--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -66,7 +66,9 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/colorAccent">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/password"
@@ -75,7 +77,6 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
                     android:focusableInTouchMode="true"
-
                     android:hint=" Password"
                     android:textColor="#000000"
                     android:textSize="20dp" />
@@ -83,7 +84,8 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:passwordToggleEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
 
@@ -95,7 +97,8 @@
                     android:focusableInTouchMode="true"
                     android:hint="Confirm Password"
                     android:textColor="#000000"
-                    android:textSize="20dp" />
+                    android:textSize="20dp"
+                    />
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
