--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -40,6 +40,7 @@
                     android:layout_margin="15dp"
                     android:focusableInTouchMode="true"
                     android:hint="Name"
+                    android:inputType="textPersonName"
                     android:textColor="#000000"
                     android:textSize="20dp" />
 
