--- a/app/src/main/res/drawable/rounded_buzzer.xml
+++ b/app/src/main/res/drawable/rounded_buzzer.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     android:shape="ring">
-    <solid android:color="#FF0505"></solid>
+    <solid android:color="#D50000"></solid>
     <corners android:radius="3000dp"></corners>
 </shape>
