--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,10 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="settings"
-    android:textSize="100dp"
-    android:textAlignment="center"/>
-</RelativeLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAlignment="center"
+                android:textSize="30dp"
+                android:text="Alert settings" />
+
+            <Switch
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:text="Notify selected contacts"
+                android:textSize="20dp"
+                tools:layout_editor_absoluteX="69dp"
+                tools:layout_editor_absoluteY="67dp"
+                android:layout_margin="15dp"/>
+
+            <Switch
+                android:id="@+id/switch1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Notify people arround me"
+                android:textSize="20dp"
+                tools:layout_editor_absoluteX="69dp"
+                tools:layout_editor_absoluteY="67dp"
+                android:layout_margin="15dp"/>
+
+            <Switch
+                android:id="@+id/switch2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Notify Police"
+
+                android:textSize="20dp"
+                android:layout_margin="15dp"/>
+
+            <Switch
+                android:id="@+id/switch3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Let me choose during emergency"
+                android:textSize="20dp"
+                android:layout_margin="15dp"/>
+
+        </LinearLayout>
+    </ScrollView>
+
+</LinearLayout>
