working on sync

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,7 @@
         />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/helpButton"
         android:layout_width="316dp"
         android:layout_height="316dp"
         android:layout_marginStart="8dp"
