--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -25,7 +25,7 @@
                 android:layout_height="130dp"
                 android:layout_marginTop="30dp"
 
-                android:src="@drawable/cop" />
+                android:src="@drawable/cop1" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
