--- a/app/src/main/res/drawable/bg_round.xml
+++ b/app/src/main/res/drawable/bg_round.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <solid android:color="@android:color/white"/>
     <stroke android:width="3dp"
-        android:color="@android:color/holo_green_light"/>
+        android:color="#FF6D00"/>
     <corners android:radius="8dp"/>
 
 </shape>
