--- a/app/src/main/res/layout/activity_pin_location2.xml
+++ b/app/src/main/res/layout/activity_pin_location2.xml
@@ -27,4 +27,16 @@
         tools:ignore="MissingConstraints">
     </SearchView>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_location_on_black_24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/map"
+        app:layout_constraintEnd_toEndOf="@+id/sv"
+        app:layout_constraintHorizontal_bias="0.979"
+        app:layout_constraintStart_toStartOf="@+id/map"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.979"
+
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
